--- a/LightDarkSwitcher/index.css
+++ b/LightDarkSwitcher/index.css
@@ -1,9 +1,24 @@
-.light {
+/* Light theme */
+body {
     color:black;
     background-color: beige;
 }
+button {
+    background-color: rgb(0, 122, 255);
+    border: none;
+    padding: 10px 30px;
+}
 
-.dark {
+/* Dark theme */
+body.dark {
     color: white;
     background-color: #1b1b1b;
+}
+
+body.dark button {
+    background-color: rgb(10, 132, 255);
+}
+
+body.dark a {
+    color: rgb(94, 92, 230);
 }
