--- a/theme.css
+++ b/theme.css
@@ -1,5 +1,32 @@
 /* Taken from the VSCode github theme (https://github.com/vscodethemes/web/blob/main/app/styles/global.css) */
+@font-face {
+    font-family: "SourceSansPro";
+    src: url("/fonts/SourceSansPro-Regular.ttf") format(truetype);
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: "SourceSansPro";
+    src: url("/fonts/SourceSansPro-Bold.ttf") format(truetype);
+    font-weight: bold;
+    font-style: normal;
+}
+@font-face {
+    font-family: "SourceSansPro";
+    src: url("/fonts/SourceSansPro-Italic.ttf") format(truetype);
+    font-weight: normal;
+    font-style: italic;
+}
+@font-face {
+    font-family: "SourceSansPro";
+    src: url("/fonts/SourceSansPro-BoldItalic.ttf") format(truetype);
+    font-weight: bold;
+    font-style: italic;
+}
+
 :root {
+    --font-body: SourceSansPro, Roboto, sans-serif;
+
     --color-foreground: hsla(0, 0%, 7%, 0.8);
     --color-foreground-muted: hsla(0, 0%, 9%, 0.5);
     --color-background: hsl(0, 0%, 98%);
@@ -22,4 +49,13 @@
     --elevation-1: 0px 4px 12px hsla(0, 0%, 0%, 12%);
     --elevation-2: 0px 3px 10px hsla(0, 0%, 0%, 10%), 0px 4px 24px hsla(0, 0%, 0%, 5%);
     --elevation-3: 0px 1px 2px hsla(0, 0%, 0%, 8%), 0px 2px 4px hsla(0, 0%, 0%, 3%);
+}
+
+body {
+    padding: 0;
+    margin: 0;
+    min-height: 100vh;
+    font-family: var(--font-body);
+    background-color: var(--color-background);
+    color: var(--color-foreground);
 }
